# Copyright 1999-2010 Gentoo Foundation
# Distributed under the terms of the GNU General Public License v2
# $Header $

*less-select-436-r1.ebuild (30 Mar 2010)

  12 Jun 2010; Martin Väth <martin@mvath.de> :
  Remove unneeded files/less.envd. Remove arches which I never tested.

  30 Mar 2010; Martin Väth <martin@mvath.de> :
  -less-select-436.ebuild +less-select-436-r1.ebuild files/lesspipe.sh:
  Update lesspipe.sh and related changes of sys-apps/less in portage tree.

  22 Jul 2009; Martin Väth <martin@mvath.de> :
  Version bump to less-436

  12 Apr 2009; Martin Väth <martin@mvath.de> :
  Version bump to less-429

  09 Feb 2009; Martin Väth <martin@mvath.de> :
  Version bump to less-424

  04 Jan 2008; Martin Väth <martin@mvath.de> :
  Version bump to less-418

  29 Nov 2007; Martin Väth <martin@mvath.de> :
  Version bump to less-416

  16 Nov 2007; Martin Väth <martin@mvath.de> :
  Version bump to less-415

  10 Oct 2007; Martin Väth <martin@mvath.de> :
  Version bump to less-409

  29 Jun 2007; Martin Väth <martin@mvath.de> :
  Version bump to less-406

  29 Dec 2005; Martin Väth <martin@mvath.de> :
  Version bump to less-394

  03 Dec 2005; Martin Väth <martin@mvath.de> :
  Version bump to less-393

  06 Mar 2005; Martin Väth <martin@mvath.de> :
  Initial version based on less-382-r2.ebuild
