@@ -1,9 +1,9 @@
 AUX README.Gentoo 823 RMD160 be59c37906fca17fa25f6781d3f5e7abc114dc57 SHA1 5a1f126af728f5220b97623050e2f9b1ea5ae58e SHA256 3985fd1810f660ea1c1f2732f719b069b6934d62d8d9e8a09287e63f049ba27d
 AUX code2color.patch 1110 RMD160 712f7b79c94f92ee62825d5f53627f18fae693d2 SHA1 a82f937f3a923b52adc4f14cfc9b641903884839 SHA256 a3887126826ef0b4b821bd97cf4e7abfc8b1c9280bf2bb18a2a4cec9a2973936
-AUX lesspipe.sh 7180 RMD160 460d9b4bd9dd7bbeae05f0441dc47ad5b1f8437f SHA1 8e7baca8239b8b36649bb9d0bb4ab0642b3a3bb6 SHA256 57d0d2022223ac028c2ac65b50944127520c8c1a9129e8ee493746677592c23c
+AUX lesspipe.sh 7295 RMD160 9f9879a6c356127ae4d27ac587a10a7e4e9fa902 SHA1 0d302a8108583273325832bf6726ef5e5b63e3a7 SHA256 2e254457fdcdd59d93d8b6d27de199e5450d0b7a7db47e8fada28674da21bdee
 DIST code2color 199875 RMD160 378d340a20c3fe500f19116220d54816fe279225 SHA1 b30526dd52c747b8bd6dcf53cf5cc94824c47feb SHA256 ce63f148293a81b0fe5e072f33285f9bf4f1d832f64b23a2220519674a47091d
-DIST less-436.tar.gz 303921 RMD160 b186b76fcdbf38056b32fbc1b54877dccf64a8ec SHA1 f78998a1a79a7e1962c901dd41bdc3d1c2005471 SHA256 57a16ff07431a9af45cf1cd5b374e1066d019304219f0d156e22bb8c4d6734d2
+DIST less-438.tar.gz 305001 RMD160 251156d58b5e71f19efc22ed5cc9f9f0e6e8c527 SHA1 7088b07ad5613491eb18327c512930dc75cbf175 SHA256 475072b806c1ed7f337f201e648fad109b28f79f3207cab5dd04ea625893d6e2
 DIST less-select-patch-436.tar.gz 47383 RMD160 5ccbe853d1f6ce5940f283bd8265ce8b75e20363 SHA1 21f3f8b16be8cd0724820c167d6f685d236cec36 SHA256 bbdd0ee9241803b8de719c358090354bde63472d1df6db271a50be51bfc800f3
-EBUILD less-select-436-r1.ebuild 2345 RMD160 40d6cdaace5f171205ad4608dfa2b15d07f43195 SHA1 2633f4bbd3b71c78133edbe364cc839558d205da SHA256 b91bfb1bacbf0be510a3a262e4435a6ff71d43a4d765ad5701811edc312de966
-MISC ChangeLog 1567 RMD160 87e948eeb23eb84fedcceba67447dcbc5184e2fd SHA1 93e3e978900fc07f7f2c03a155fce25d7b2e8239 SHA256 19901b35b7d07de051320714449eaefc588cf177a5b785ee5740c47376e3708c
+EBUILD less-select-438.ebuild 2342 RMD160 7af61813c4c5022ebfe05a81a9a84f956c384cc6 SHA1 7d110184124c60eada70dc81f62130a51521eb3c SHA256 a04c2328afaed8b29a20bf25151e6cd587fb209ac065521e9297eb8aad123c40
+MISC ChangeLog 1713 RMD160 0468ce117d45c0b9ef061f3ad9c9a91f4d76ba52 SHA1 f345686113cf41f11ba2cbce6f1d656cc06a52de SHA256 7c3ceb97026efe26d8ba7dea69d44073d5f2a5630440350219c299a76cd6f870
 MISC metadata.xml 502 RMD160 3e3f84a9d63d37d044acba98f3add536f1dc98a6 SHA1 a45389d6d02b23a47a70a174d4d49b9c24480f62 SHA256 24b8610aa08d7c0ef1f1e84af06ffe327396a5132cb9bf51c426496e4ad8df61
